# kiro-project

./: .gitignore  Dockerfile  Procfile  README.md  app.py  build.sh  docker-compose.yml  pyproject.toml  render.yaml  start.sh
.kiro/specs/intelligent-auto-dashboard/: design.md  requirements.md  tasks.md
agents/: __init__.py  base_agent.py  chat_agent.py  code_generation_engine.py  dashboard_agent.py  dashboard_tools.py  descriptive_agent.py  eda_agent.py  ml_scientist_agent.py  pattern_recognition.py  prescriptive_agent.py
utils/: __init__.py  data_validator.py
