[tool.poetry]
name = "streamlit-data-intelligence"
version = "0.1.0"
description = "AI-powered Business Intelligence Dashboard with Multiple Agents"
authors = ["Given Malebe <Givenmalebe@gmail.com>"]
readme = "README.md"
packages = [{include = "agents"}, {include = "utils"}]

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7"
streamlit = "^1.39.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
plotly = "^5.17.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"
google-generativeai = "^0.7.0"
python-dotenv = "^1.0.0"
streamlit-chat = "^0.1.1"
streamlit-option-menu = "^0.3.6"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.1"
altair = "^5.0.0"
torch = "^2.0.0"
xgboost = "^1.7.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
start-app = "run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true